Fixed central saanich label, fixed select overflowing

--- a/scss/_events.scss
+++ b/scss/_events.scss
@@ -14,6 +14,10 @@
   background-color: $offwhite;
   border-radius: 25px;
   margin-bottom: 50px;
+
+  select {
+    max-width: 100%;
+  }
 }
 
 .custom-events-bar-body {
