--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -247,3 +247,21 @@ a {
     margin-top: 25px;
   }
 }
+
+.video-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: $darkshadow;
+  z-index: 300;
+  display: flex;
+  align-items: center;
+
+  * {
+    color: $white;
+    text-align: center;
+    text-shadow: 1px 1px 2px $grey;
+  }
+}
