--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,7 @@ $yellow: #f3e78f;
 $purple: #a08eb5;
 $white: #fff;
 $shadow: rgba(0, 0, 0, .4);
+$darkshadow: rgba(0, 0, 0, .9);
 $grey: rgba(255, 255, 255, .5);
 $offwhite: #efefef;
 $green: #aabf65;
